Closed
Bug 348708
Opened 19 years ago
Closed 19 years ago
"ASSERTION: same old and new parent frame" adding to optgroup
Categories
(Core :: Layout: Form Controls, defect)
Core
Layout: Form Controls
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: MatsPalmgren_bugz)
References
Details
(Keywords: assertion, regression, testcase)
Attachments
(2 files)
|
420 bytes,
application/xhtml+xml
|
Details | |
|
2.14 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: same old and new parent frame: 'aOldParentFrame != aNewParentFrame', file /Users/admin/trunk/mozilla/layout/generic/nsHTMLContainerFrame.cpp, line 489
I'm guessing that this is a regression, but I don't have a regression range.
| Reporter | ||
Comment 1•19 years ago
|
||
| Reporter | ||
Comment 2•19 years ago
|
||
I also see
###!!! ASSERTION: Potential deadlock between Monitor@bfffbc84 and XPCJSRuntime::mMapLockMonitor@212b500: 'Error', file /Users/admin/trunk/mozilla/xpcom/threads/nsAutoLock.cpp, line 302
when I load this testcase from Bugzilla and reload. I don't know if that's related.
| Assignee | ||
Updated•19 years ago
|
Assignee: nobody → mats.palmgren
OS: Mac OS X 10.4 → All
Hardware: Macintosh → All
| Assignee | ||
Comment 3•19 years ago
|
||
The assertion is harmless but noisy.
ReparentFrameViewList will return without any side-effects when
|newParent == parentFrame| and we will do redundant assignment
after the call in nsCSSFrameConstructor.
http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/layout/generic/nsHTMLContainerFrame.cpp&rev=3.217&root=/cvsroot&mark=520#481
I don't see the second assertion (in comment 2) and I'm pretty sure
it's unrelated.
Severity: normal → minor
| Assignee | ||
Comment 4•19 years ago
|
||
Attachment #234524 -
Flags: superreview?(bzbarsky)
Attachment #234524 -
Flags: review?(bzbarsky)
Comment 5•19 years ago
|
||
Comment on attachment 234524 [details] [diff] [review]
Patch rev. 1
Yeah, makes sense.
Attachment #234524 -
Flags: superreview?(bzbarsky)
Attachment #234524 -
Flags: superreview+
Attachment #234524 -
Flags: review?(bzbarsky)
Attachment #234524 -
Flags: review+
| Assignee | ||
Comment 6•19 years ago
|
||
Checked in to trunk at 2006-08-21 19:29 PDT.
-> FIXED
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•