Fix an "ASSERTION: same old and new parent frame". b=348708 r+sr=bzbarsky